# ToasterGameEngine

./: CMakeLists.txt  CMakePresets.json  README.md
ToasterGameEngineCore/: CMakeLists.txt  application.cpp  application.h  asserts.h  clock.cpp  clock.h  containers.h  copy_assets.cmake  event.cpp  event.h  fileIO.h  game.h  input.cpp  input.h  logger.cpp  logger.h  macros.h  memory.h  platform.cpp  platform.h  toaster.h
ToasterGameEngineCore/platform/: platform.cpp  platform.h  platformState.h
ToasterGameEngineCore/render/: renderer.cpp  renderer.h
ToasterGameEngineCore/render/shaders/: shader.frag  shader.vert
ToasterGameEngineCore/toastScript/: Source.cpp  codeGenerator.h  lexer.h  parser.h  symbols.h
ToasterGameEngineCore/types/: callback.h  io.h  primitive.h  string.h  structs.h  thread.h  time.h  types.h
toasterTest/: CMakeLists.txt  toasterTest.cpp
